    * [UIMA-1069] - Model file is not loaded correctly if tagger is deployed more than once in same AE
    * [UIMA-1071] - http connector fails with some Java implementations
    * [UIMA-1085] - Fix Sandbox NOTICE files
    * [UIMA-1106] - update OpenCalaisAnnotator with correct encodings
    * [UIMA-1108] - correct character offset for OpenCalais annotator
    * [UIMA-1154] - UIMA-AS extended tests hang when running with IBM JVM 1.6 service release 1
    * [UIMA-1193] - Tagger throws occasional NPE
    * [UIMA-1264] - Regex annotator goes into infinite loop on patterns that match the empty string
    * [UIMA-1374] - TikaAnnotator source code does not compile because of incorrect package declarations
    * [UIMA-1378] - Build of uimaj-examples project fails
    * [UIMA-1379] - Type system namespace should be org.apache.uima.tika, not just org.apache.uima
    * [UIMA-1384] - WhitespaceTokenizer pom still references UIMA 2.2.2
    * [UIMA-1385] - Regex annotator does not close concept file input stream after reading
    * [UIMA-1392] - OpenCalaisAnnotator's annotations have truncated 'coveredText' field
    * [UIMA-1403] - Lucas: many test cases fail
    * [UIMA-1446] - org.apache.uima.simpleserver.config.impl.SimpleFilterImpl.match() can cause a null pointer exception
    * [UIMA-1447] - Tabulations are annotated as tokens after a space
    * [UIMA-1456] - SimpleServer: sample config file does not work
    * [UIMA-1457] - SimpleServer: docs need updating for Tomcat 6
    * [UIMA-1460] - AnnotationTokenStream.next(Token) should not catch Throwable
    * [UIMA-1462] - SimpleUimaAsService has checked in SimpleServer libraries as binaries
    * [UIMA-1464] - SimpleServer NOTICE file missing JSR 173 attribution
    * [UIMA-1528] - The documentation describes still the UEAStemmer, which was removed from the distribution
    * [UIMA-1530] - Index naming is not unique in multithreaded scenarios