@@ -164,8 +164,6 @@ issues you find at
 </li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-1108'>UIMA-1108</a>] -         correct character offset for OpenCalais annotator
 </li>
-<li>[<a href='https://issues.apache.org/jira/browse/UIMA-1154'>UIMA-1154</a>] -         UIMA-AS extended tests hang when running with IBM JVM 1.6 service release 1
-</li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-1193'>UIMA-1193</a>] -         Tagger throws occasional NPE
 </li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-1264'>UIMA-1264</a>] -         Regex annotator goes into infinite loop on patterns that match the empty string
@@ -224,6 +222,8 @@ issues you find at
 </li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-1572'>UIMA-1572</a>] -         Lucas artifactId does not match folder name in svn
 </li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-1577'>UIMA-1577</a>] -         Do pear packaging with dependencies included for CFE
+</li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-1582'>UIMA-1582</a>] -         SimpleServer ConfigTest fails
 </li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-1595'>UIMA-1595</a>] -         Change build of Sandbox RegExpr to use xmlbean maven plugin, and delete its lib dir
@@ -245,6 +245,8 @@ issues you find at
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-1676'>UIMA-1676</a>] -         Regex: pear install.xml is missing 2 of the 3 jar files
 </li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-1683'>UIMA-1683</a>] -         fix copyright notice in the NOTICE files
+</li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-1685'>UIMA-1685</a>] -         Sandbox licenses has uima-as licenses, but those are now moved out into a separate entity
 </li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-1686'>UIMA-1686</a>] -         add licenses from some Sandbox projects to overall Sandbox license
 </li>
@@ -282,6 +284,8 @@ issues you find at
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-1506'>UIMA-1506</a>] -         update Bean Scripting Framework Annotator with info about licenses and documentation
 </li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-1517'>UIMA-1517</a>] -         Don't set executable bits on non-executables, when building assemblies
+</li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-1518'>UIMA-1518</a>] -         improve SandboxDistr assembly
 </li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-1527'>UIMA-1527</a>] -         Upgrade Tika Annotator for 2.3.0 release
 </li>
@@ -363,6 +367,6 @@ issues you find at
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-1469'>UIMA-1469</a>] -         Add Lucas to the sandbox home page
 </li>
 </ul>
-         
+    
 </body>
 </html>
